--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Todo Home Page</title>
+    <title>To-do Manager</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <%- include('header.ejs') %>
-    <!-- List all the TODOS -->
-    <%- include('todos.ejs', { todos: todos }) %>
-    <%- include('footer.ejs') %>
+    <div class="grid grid-cols-6">
+      <div class="col-start-3 col-span-2">
+        <%- include('header.ejs') %>
+        <form>
+          <div class="flex gap-2 mt-5">
+            <div class="flex-auto">
+              <input placeholder="What's next?" type="text" required class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm "/>
+            </div>
+            <div class="flex-auto"><input type="date" required class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4"/></div>
+            <div class="flex-none"><button type="submit" class="bg-green-600 text-white px-5 py-2 rounded">Add</button></div>
+          </div>
+        </form>
+        <%- include('todos.ejs', { overdueTodos, dueLaterTodos, dueTodayTodos }) %>
+      </div>
+    </div>
+     <%- include('footer.ejs') %>
   </body>
 </html>
