--- a/todo-app/views/todo-item.ejs
+++ b/todo-app/views/todo-item.ejs
@@ -1,12 +1,13 @@
 <div class="flex items-center w-fit mx-2 px-2 py-1 hover:bg-purple-50 rounded">
   <input
     type="checkbox"
-    id="<%= category %>-<%= todo.id %>"
+    id="todo-checkbox-<%= todo.id %>"
     class="w-4 h-4 text-blue-600 bg-green-600 rounded"
+    <%= todo.completed ? 'checked' : '' %>
+    onclick="setCompletionStatus(<%= todo.id %>, !<%= todo.completed %>)"
   />
-  <label class="ml-2 text-sm flex-auto cursor-pointer" for="<%= category %>-<%= todo.id %>" value="<%= todo.completed %>"
+  <label class="ml-2 text-sm flex-auto cursor-pointer" for="todo-checkbox-<%= todo.id %>"  
     ><%= todo.title %></label
   >
-  <a href="#" class="hidden trash-icon ml-2"><%- include('trash.ejs') %></a>
+  <a href="#" class="hidden trash-icon ml-2"  onclick="deleteTodo(<%= todo.id %>)"><%- include('trash.ejs') %></a>
 </div>
-<!-- <pre><%= todo.id %> <%= todo.title %> <%= todo.completed %> <%= todo.dueDate %></pre> -->
